--- a/server/.env
+++ b/server/.env
@@ -2,8 +2,8 @@ PORT=5200
 DB_HOST=localhost
 DB_PORT=5432
 DB_PASSWORD=1
-DB_NAME=postgres
-DB_USER=postgres
+DB_NAME=motorazborka
+DB_USER=alex
 SECRET_KEY=random_secret_key123
 
 #DB_NAME=test
