--- a/server/.env
+++ b/server/.env
@@ -3,7 +3,7 @@ DB_HOST=localhost
 DB_PORT=5432
 DB_PASSWORD='1iS8K;t3(z4'
 DB_NAME=motorazborka
-DB_USER=postgres
+DB_USER=alex
 SECRET_KEY=random_secret_key123
 
 #DB_NAME=test
